<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BitChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="name_hint">Please enter your name</string>
    <string name="password_hint">Please enter your password</string>
    <string name="number_hint">Please enter your number</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="send">Send</string>
    <string name="title_activity_chat">ChatActivity</string>

</resources>
