<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="io.bitfountain.matthewparker.bitchat.SignInActivity">

    <LinearLayout
        android:layout_gravity="center"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_name"
            android:hint="@string/name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/user_password"
            android:hint="@string/password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/user_number"
            android:hint="@string/number_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sign_up_button"
                android:text="@string/sign_up"
                android:layout_weight="50"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/log_in_button"
                android:text="@string/log_in"
                android:layout_weight="50"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
